k8s-manifests/service-a-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  labels:
    app: service-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: felixjayamuni/service-a:latest
          ports:
            - containerPort: 3000
