k8s-manifests/service-b-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: your-dockerhub-username/service-b:latest
          ports:
            - containerPort: 4000
