k8s-manifests/service-a-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a-service
  namespace: service-a-ns
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
