k8s-manifests/service-b-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-b-service
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
